# common

./: .gitignore  CLAUDE.md  application.yaml  build.sbt  package-lock.json  package.json  pyproject.toml  tsconfig.json
schemas/: catalog-manifest.json  constants.json  entity-types.json  office-codes.yaml  org-stopwords.yaml  party-codes.yaml  quicksilver-metamodel.json  state-codes.yaml  url-patterns.json
scripts/: generate-model.js  yaml2json.js
src/: index.ts
src/main/python/electinfo_common/: __init__.py  _schemas.py  constants.py  entity_types.py  office_codes.py  org_stopwords.py  party_codes.py  place_names.py  slug.py  state_codes.py  url_patterns.py
src/main/python/electinfo_common/identifiers/: __init__.py  consumer_namespaces.py  consumer_uuid_generation.py  namespaces.py  spark_udfs.py  uuid_generation.py
src/main/python/electinfo_common/identifiers/tests/: test_consumer_namespaces.py  test_namespaces.py  test_uuid_generation.py
src/main/scala/info/elect/model/: QuicksilverSchemas.scala  SchemaBase.scala
src/main/typescript/: index.ts
src/main/typescript/loaders/: README.md  cms-loader.ts
src/main/typescript/types/: README.md  cms-merged.md  cms-merged.ts  entities.ts
src/test/python/: test_constants.py  test_entity_types.py  test_office_codes.py  test_party_codes.py  test_place_names.py  test_slug.py  test_state_codes.py  test_url_patterns.py
tasks/: git-clone.yaml  kustomization.yaml  npm-publish.yaml  pipeline.yaml  pypi-publish.yaml  pytest.yaml  sbt-publish.yaml  trigger-spark-runner-rebuild.yaml  triggers.yaml
(+67 files in other folders)
