[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "electinfo-common"
version = "0.2.0"
description = "Shared schemas, templates, and constants for electinfo"
license = "MIT"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/main/python/electinfo_common"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "electinfo_common/schemas"

[tool.pytest.ini_options]
testpaths = ["src/test/python"]
