[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "electinfo-common"
version = "0.3.0"
description = "Shared schemas, templates, constants, and UUID5 identifiers for electinfo"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "siege-utilities>=3.3.0",  # for identifiers.uuid5_from_seed et al
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
spark = [
    "pyspark>=3.4",
    "pandas>=1.5",
    "pyarrow>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/main/python/electinfo_common"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "electinfo_common/schemas"

[tool.pytest.ini_options]
testpaths = ["src/test/python"]
